--- a/Ctr.AuthPlatform/Ctr.AuthPlatform.Gateway/Ctr.AuthPlatform.Gateway.csproj
+++ b/Ctr.AuthPlatform/Ctr.AuthPlatform.Gateway/Ctr.AuthPlatform.Gateway.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Ocelot" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Ctr.AhphOcelot\Ctr.AhphOcelot.csproj" />
   </ItemGroup>
 
 </Project>
