网关加入redis缓存功能，并重写内部配置缓存接口

--- a/Ctr.AuthPlatform/Ctr.AuthPlatform.Gateway/Ctr.AuthPlatform.Gateway.csproj
+++ b/Ctr.AuthPlatform/Ctr.AuthPlatform.Gateway/Ctr.AuthPlatform.Gateway.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CSRedisCore" Version="3.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Ocelot" Version="12.0.1" />
     <PackageReference Include="Ocelot.Administration" Version="0.1.0" />
