--- a/Ctr.AuthPlatform/Ctr.AhphOcelot/Ctr.AhphOcelot.csproj
+++ b/Ctr.AuthPlatform/Ctr.AhphOcelot/Ctr.AhphOcelot.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CSRedisCore" Version="3.0.20" />
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.13" />
     <PackageReference Include="Ocelot" Version="12.0.1" />
