完成Ids4使用Dapper持久化功能

--- a/Ctr.AuthPlatform/Ctr.AuthPlatform.TestIds4/Ctr.AuthPlatform.TestIds4.csproj
+++ b/Ctr.AuthPlatform/Ctr.AuthPlatform.TestIds4/Ctr.AuthPlatform.TestIds4.csproj
@@ -5,8 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4" Version="2.2.0" />
+    <PackageReference Include="IdentityServer4" Version="2.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IdentityServer4.Dapper\IdentityServer4.Dapper.csproj" />
   </ItemGroup>
 
 </Project>
