--- a/src/Czar.AuthPlatform.Web/appsettings.json
+++ b/src/Czar.AuthPlatform.Web/appsettings.json
@@ -1,5 +1,7 @@
 {
   "CzarConfig": {
+    //网关授权地址
+    "PublicOrigin": "http://localhost:7777",
     //数据库连接字符串
     "DbConnectionStrings": "Server=192.168.1.114;Database=mpc_identity;User ID=sa;Password=bl123456;"
   }
