--- a/src/Czar.AuthPlatform.Web/Czar.AuthPlatform.Web.csproj
+++ b/src/Czar.AuthPlatform.Web/Czar.AuthPlatform.Web.csproj
@@ -5,9 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
     <PackageReference Include="Czar.IdentityServer4" Version="0.2.0" />
+    <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Czar.AuthPlatform.Core\Czar.AuthPlatform.Core.csproj" />
   </ItemGroup>
 
 </Project>
